plugins/kotlin/idea/tests/testData/multiModuleLineMarker/fromClassToAlias/common/common.kt
expect class <!LINE_MARKER("descr='Has actuals in [jvm, js] modules'; targets=[(text=jvm; icon=nodes/Module.svg); (text=js; icon=nodes/Module.svg)]")!>Header<!> {

}
